# zilib

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  Makefile  NOTES.md  README.md  lists
ad_hoc_tests/: Makefile  README.md  test_binary_search.sh  test_binary_search_fast.sh
lists/: charlist.csv  charlist.json  edb_charlist.txt  english_variants.csv  english_variants.json  index.md  varcon.txt.bz2  wordshk_autoconvert.json  wordshk_autoconvert.txt  wordshk_charlist.txt  wordshk_charset.json  wordshk_variantmap.json  wordshk_variantmap.txt  wordslist.csv
python/: .gitignore  Cargo.toml  Makefile  README.md  copy_function_definitions.py  copy_packaged_lists  pyproject.toml
python/.cargo/: config
python/lists/: en_unigram_freq.csv.bz2  index.md  wordshk_autoconvert.txt
python/src/: lib.rs
python/tests/: test_wordshk_original.py  tests.py  wordshk_original_tests.py
python/zilib/: __init__.py
python/zilib-python/: __init__.py
scripts/: bump.py
src/: cantonese.rs  cjk.rs  common.rs  data.rs  english.rs  latin.rs  lib.rs  ruby_match.rs  segmentation.rs  stemmer.rs  unihan.rs  zigen.rs
test_with_python/: .gitignore  Makefile  README.md  test_stemmer.py  tests.py  wordshk_original_tests.py
zilib-python/: Cargo.toml  Makefile  copy_function_definitions.py  pyproject.toml
zilib-python/python/zilib/: __init__.py
zilib-python/src/: lib.rs
zilib-python/tests/: test_general.py  test_wordshk_original.py
