[package]
name = "zilib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zigen"
path = "src/zigen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Also see https://github.com/rust-lang/cargo/issues/4881
[lib]
name = "zilib"
crate-type = ["cdylib"]

[dependencies]
bzip2 = "0.4.4"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
pyo3 = "0.20.0"
regex = "1.10.3"
serde_json = "1.0.113"
unicode_categories = "0.1.1"
