[package]
name = "zilib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zigen"
path = "src/zigen.rs"

[dependencies]
bzip2 = "0.4.4"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
regex = "1.10.3"
serde_json = "1.0.113"
unicode_categories = "0.1.1"

[features]
default = ["generated_data"]
generated_data = []

