[package]
name = "zilib"
version = "0.1.9"
edition = "2021"

[dependencies]
bzip2 = "0.4.4"
csv = "1.3.0"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
unicode_categories = "0.1.1"

[features]
default = []
downloaded_data = []
