[package]
name = "zilib-python"
version = "0.1.7"
edition = "2021"

[dependencies]

# TODO: maybe this needs to be a workspace instead?
zilib = { git = "https://github.com/wordshk/zilib", version = "0.1.0" }

[lib]
name = "zilib_python"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.20.2"
features = ["extension-module"]

