[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "zilib"
version = "0.1.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]

[project.optional-dependencies]
dev = ["pytest"]
